@@ -1,4 +1,4 @@
-AC_INIT([mbuffer],[20160228])
+AC_INIT([mbuffer],[20160613])
 AC_CONFIG_HEADER([config.h])
 AC_CONFIG_SRCDIR([mbuffer.c])
 
